test/shouldPass/vonJonas/commented_program.pas
program CommentedProgram;
// We comment stuff
(**)begin (* WHY DOES THIS PROGRAMMING LANGUAGE HAVE SO MANY BLOCK_COMMENT-STYLES? *)
    // everywhere
    writeln('// comments in strings { are } (* ok *)!');
    (* // this is still a valid comment *)
end.{ (* / */)/ } // {}{}{} (**)((