test/shouldFail/vonJonas/wrong_comments2.pas
program CommentedProgram;
begin
    writeln('This is fine'); { Unclosed comment
    writeln('This line is actually still inside the comment!');
end.